# env

./: .env.config.default.json  .env.repository.json  Cargo.toml  LICENSE  README.md  README_CN.md  config.json
scripts/: requirements.txt  update_repository.py
src/: check.rs  download.rs  env_config.rs  environment.rs  install.rs  lib.rs  main.rs  path.rs  version.rs  zip.rs
src/args/: mod.rs
src/environment/: environments.rs  mod.rs
src/installers/: java.rs  mod.rs
