[package]
name = "env"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = {version = "4.5.23", features = ["derive"]}
dirs = "5.0.1"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros"] }
log = "0.4.22"
zip = "2.2.2"
flate2 = "1.0.35"
tar = "0.4.43"
bzip2 = "0.5.0"
xz2 = "0.1.7"
sevenz-rust = "0.6.1"
dialoguer = "0.11.0"
colored = "2.1.0"
config = {version ="0.15.4", features = ["json"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
lazy_static = "1.5.0"
indicatif = "0.17.9"
